# calyp

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Mainpage.dox  README.md  config.h.in  format_source_files.sh  update_upstream_and_merge_into_master.sh
.github/workflows/: build.yaml  build.yml
app/: CMakeLists.txt  CalypAppModuleIf.cpp  CalypAppModuleIf.h  CommonDefs.h  DBusAppAdaptor.cpp  DBusAppAdaptor.h  GridManager.cpp  GridManager.h  MainWindow.cpp  MainWindow.h  MdiSubWindow.cpp  MdiSubWindow.h  ModuleSubWindow.cpp  ModuleSubWindow.h  ModulesHandle.cpp  ModulesHandle.h  PlotSubWindow.cpp  PlotSubWindow.h  QualityHandle.cpp  QualityHandle.h  ResourceHandle.cpp  ResourceHandle.h  SubWindowAbstract.cpp  SubWindowAbstract.h  SubWindowHandle.cpp  SubWindowHandle.h  VideoHandle.cpp  VideoHandle.h  VideoStreamSubWindow.cpp  VideoStreamSubWindow.h  VideoSubWindow.cpp  VideoSubWindow.h  ViewArea.cpp  ViewArea.h  main.cpp
app/dialog/: AboutDialog.cpp  AboutDialog.h  ConfigureFormatDialog.cpp  ConfigureFormatDialog.h  ModulesHandleOptDialog.cpp  ModulesHandleOptDialog.h  ProgressBar.cpp  ProgressBar.h  SeekStreamDialog.cpp  SeekStreamDialog.h  SubWindowSelectorDialog.cpp  SubWindowSelectorDialog.h
app/docks/: FramePropertiesDock.cpp  FramePropertiesDock.h  ModuleHandleDock.cpp  ModuleHandleDock.h  QualityMeasurementSidebar.cpp  QualityMeasurementSidebar.h
app/resources/: calyp.icns
app/widgets/: FrameNumberWidget.cpp  FrameNumberWidget.h  HistogramWidget.cpp  HistogramWidget.h
cmake/: BuildPkg.cmake  FindFFmpeg.cmake  ModulesFct.cmake  Win32.cmake
examples/: CMakeLists.txt
examples/modules/: AbsoluteFrameDifferenceExample.cpp  AbsoluteFrameDifferenceExample.h  CMakeLists.txt  FrameBinarizationAPIv1.cpp  FrameBinarizationAPIv1.h  FrameBinarization_APIv1.cpp  FrameBinarization_APIv1.h
examples/stream/: CMakeLists.txt  testStreamReading.cpp
lib/: CMakeLists.txt  CalypConfig.cmake.in  CalypDefs.h  CalypFrame.cpp  CalypFrame.h  CalypLib.h  CalypModuleIf.cpp  CalypModuleIf.h  CalypOpenCVModuleIf.cpp  CalypOpenCVModuleIf.h  CalypOptions.cpp  CalypOptions.h  CalypPixel.cpp  CalypPlane.h  CalypStream.cpp  CalypStream.h  CalypStreamHandlerIf.h  LibMemory.h  PixelFormats.cpp  PixelFormats.h  StreamHandlerLibav.cpp  StreamHandlerLibav.h  StreamHandlerOpenCV.cpp  StreamHandlerOpenCV.h  StreamHandlerPortableMap.cpp  StreamHandlerPortableMap.h  StreamHandlerRaw.cpp  StreamHandlerRaw.h
lib/catch2/: CMakeLists.txt  CalypFrameTests.cpp  CalypLibTests.cpp  CalypStreamTests.cpp
lib/tests/: CMakeLists.txt  PlaYUVerFrameQualityTests.cpp
modules/: AbsoluteFrameDifference.cpp  AbsoluteFrameDifference.h  CMakeLists.txt  CalypModulesFactory.cpp  CalypModulesFactory.h  DisparityStereoBM.cpp  DisparityStereoBM.h  DisparityStereoSGBM.cpp  DisparityStereoSGBM.h  DisparityStereoVar.cpp  DisparityStereoVar.h  DummyOpencvModule.cpp  DummyOpencvModule.h  EightBitsSampling.cpp  EightBitsSampling.h  FilterComponent.cpp  FilterComponent.h  FrameBinarization.cpp  FrameBinarization.h  FrameConcatenation.cpp  FrameConcatenation.h  FrameCrop.cpp  FrameCrop.h  FrameDifference.cpp  FrameDifference.h  FrameMask.cpp  FrameMask.h  FrameResampling.cpp  FrameResampling.h  FrameRotate.cpp  FrameRotate.h  FrameShift.cpp  FrameShift.h  HEVCIntraPrediction.cpp  HEVCIntraPrediction.h  InterFrameVariance.cpp  InterFrameVariance.h  LumaAverage.cpp  LumaAverage.h  MeasureOpticalFlowDualTVL1.cpp  (+29 more)
modules/tests/: CMakeLists.txt  TestModuleCreate.cpp  TestModuleProcessNumberOfFrames.cpp
tools/: CMakeLists.txt  CalypTools.cpp  CalypTools.h  CalypToolsCmdParser.cpp  CalypToolsCmdParser.h  main.cpp
